# nicholastacik.github.io

./: .gitignore  README.md  _quarto.yml  about.qmd  index.qmd  pyproject.toml  styles.css
.claude/skills/cryptic-crossword/: SKILL.md
.claude/skills/update-montreal-events/: SKILL.md
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-07-04-jeopardy-scraper.md  2026-07-05-category-clustering.md  2026-07-06-blog-post.md  2026-07-06-category-tokens.md  2026-07-07-research-tool.md  2026-07-11-montreal-events.md
docs/superpowers/specs/: 2026-07-04-jeopardy-scraper-design.md  2026-07-05-category-clustering-design.md  2026-07-06-blog-post-design.md  (+3 more)
jeopardy/: README.md  __main__.py  build_parquet.py  config.py  crawl.py  fetch.py  main.py  parse.py
jeopardy/analysis/: cluster.py  documents.py  embed.py  label.py  name_clusters.py  research.py  tokens.py
jeopardy/tests/: test_analysis_pipeline.py  test_build.py  test_cli.py  test_cluster.py  test_crawl.py  test_documents.py  test_embed.py  test_fetch.py  test_label.py  test_name_clusters.py  test_parse.py  test_research.py  test_tokens.py
montreal_events/: calendar_map.json  check_links.py  events.schema.json  fetch_doc.py  validate.py
montreal_events/tests/: test_check_links.py  test_fetch_doc.py  test_schema.py  test_validate.py
posts/: _metadata.yml
posts/cheatsheet/: index.qmd
posts/cryptic_crossword/: cryptic.html  cryptic_2026-06-27.html  cryptic_2026-07-05.html  index.qmd
posts/jeopardy_ds/: category_clusters.parquet  category_tokens.parquet  cluster_labels.csv  cluster_naming_prompt.md  cluster_summary.parquet  index.qmd
posts/montreal_events/: index.qmd
posts/welcome/: index.qmd
(+18 files in other folders)
