[project]
name = "nicholastacik-site"
version = "0"
description = "Dependencies for executing code in Quarto entries."
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "matplotlib",
    "pandas",
]

[tool.uv]
# Not a Python package — just an environment for rendering. Don't try to build it.
package = false
