[project]
name = "nicholastacik-site"
version = "0"
description = "Dependencies for executing code in Quarto entries."
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "matplotlib",
    "pandas",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
]

[tool.uv]
# Not a Python package — just an environment for rendering. Don't try to build it.
package = false

[dependency-groups]
analysis = [
    "openai>=2.44.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "umap-learn>=0.5.12",
]
scraper = [
    "beautifulsoup4>=4.15.0",
    "click>=8.4.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pytest>=9.1.1",
]
montreal = [
    "httpx>=0.28.1",
    "jsonschema>=4.25.0",
    "pytest>=9.1.1",
]
